--- a/DgraphExample/DgraphExample.csproj
+++ b/DgraphExample/DgraphExample.csproj
@@ -9,13 +9,12 @@
 
     <ItemGroup>
       <Reference Include="Dgraph">
-        <HintPath>..\..\..\..\dgraph.net\source\Dgraph\bin\Debug\net7.0\Dgraph.dll</HintPath>
+        <HintPath>..\..\..\dgraph.net\source\Dgraph\bin\Debug\net7.0\Dgraph.dll</HintPath>
       </Reference>
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="FluentResults" Version="3.15.2" />
-      <PackageReference Include="Google.Protobuf" Version="3.24.1" />
       <PackageReference Include="Grpc.Net.Client" Version="2.38.0" />
     </ItemGroup>
 
