--- a/DgraphExample/DgraphExample.csproj
+++ b/DgraphExample/DgraphExample.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentResults" Version="3.15.2" />
+      <PackageReference Include="Google.Protobuf" Version="3.24.1" />
       <PackageReference Include="Grpc.Net.Client" Version="2.38.0" />
     </ItemGroup>
 
